--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ MYSQL_USER=user
 MYSQL_PASSWORD=password
 MYSQL_ROOT_PASSWORD=root
 FILE_NAME=en.openfoodfacts.org.products.csv
+SELECTED_COLUMNS="energy_100g proteins_100g carbohydrates_100g fat_100g energy-kcal_100g sugars_100g saturated-fat_100g salt_100g sodium_100g"
